--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <body>
         <div>
             <span><img src="logo2.jpg"></span>
-            <h1 id="headtext">欢迎来到YibanPage</h1>
+            <h1 id="headtext">欢迎来到易班丛林</h1>
         </div>
         <div id="link">
-            <div class="link">院系丛林<div>
-            <div class="link">学生博客丛<div>
-            <div class="link">创建您的博客<div>
-            <div class="link">更新您的博客<div>
+            <div class="link">院系Page<div>
+            <div class="link">学生易班Page<div>
+            <div class="link">示例<div>
         </div>
     </body>
 
